--- a/assets/scss/_profile.scss
+++ b/assets/scss/_profile.scss
@@ -1,4 +1,7 @@
 section.profileSection {
+    div.container{
+        width: 100%;
+    }
     background-color: $primaryBgColor;
     color: white;
     padding: 20px 0;
